--- a/day6/index.html
+++ b/day6/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day 6</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-  <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day 6</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="alert">Press any key</div>
+      <div class="box hide">
+        <div class="result">
+        </div>
+        <div class="detail">
+          <div class="value">
+            <div class="header">Key</div>
+            <div class="content key"></div>
+          </div>
+          <div class="value">
+            <div class="header">
+              Location
+            </div>
+            <div class="content location"></div>
+          </div>
+          <div class="value">
+            <div class="header">Which</div>
+            <div class="content which"></div>
+          </div>
+          <div class="value">
+            <div class="header">Code</div>
+            <div class="content code"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
