--- a/day6/index.html
+++ b/day6/index.html
@@ -11,6 +11,7 @@
       <div class="alert">Press any key</div>
       <div class="box hide">
         <div class="result">
+          <p class="result-text"></p>
         </div>
         <div class="detail">
           <div class="value">
